Updating tests to use getLeft() and getRight() instead of direct references.