@@ -14,12 +14,7 @@ public class AVLNodeTest {
     private Integer four = 4;
     private Integer five = 5;
     private Integer six = 6;
-    private Comparator<Integer> comparator = new Comparator<Integer>() {
-        @Override
-        public int compare(Integer one, Integer two) {
-            return one.compareTo(two);
-        }
-    };
+    private Comparator<Integer> comparator = Integer::compareTo;
 
     /**
      * Construct a single node, and test properties.
@@ -31,7 +26,7 @@ public class AVLNodeTest {
         assertFalse(root.hasRight());
         assertNull(root.left);
         assertNull(root.right);
-        assertEquals(root.key, new Integer(0));
+        assertEquals(root.key, Integer.valueOf(0));
         assertEquals(1, root.size);
         assertEquals(1, root.height);
         assertTrue(root.contains(root.key, comparator));
@@ -70,11 +65,11 @@ public class AVLNodeTest {
         assertEquals(three, newRoot.key);
         assertTrue(newRoot.hasLeft());
         assertFalse(newRoot.hasRight());
-        assertEquals(one, newRoot.left.key);
-        assertFalse(newRoot.left.hasLeft() && newRoot.left.hasRight());
+        assertEquals(one, newRoot.getLeft().key);
+        assertFalse(newRoot.getLeft().hasLeft() && newRoot.getLeft().hasRight());
         assertEquals(2, newRoot.size);
         assertEquals(2, newRoot.height);
-        assertTrue(newRoot.contains(newRoot.left.key, comparator));
+        assertTrue(newRoot.contains(newRoot.getLeft().key, comparator));
         assertTrue(newRoot.contains(newRoot.key, comparator));
     }
 
@@ -102,7 +97,7 @@ public class AVLNodeTest {
         // Test that both root and child nodes of newest tree have new identities; replacing child requires replacing parent.
         assertEquals(rootTwo.key, rootThree.key);
         assertNotEquals(rootTwo, rootThree);
-        assertEquals(rootTwo.left.key, rootThree.left.key);
+        assertEquals(rootTwo.getLeft().key, rootThree.getLeft().key);
         assertNotEquals(rootTwo.left, rootThree.left);
     }
 
@@ -130,8 +125,8 @@ public class AVLNodeTest {
 
         // Verify first rotation
         assertEquals(two, root.key);
-        assertEquals(one, root.left.key);
-        assertEquals(three, root.right.key);
+        assertEquals(one, root.getLeft().key);
+        assertEquals(three, root.getRight().key);
         assertEquals(3, root.size);
         assertEquals(2, root.height);
         root.validate();
@@ -142,10 +137,10 @@ public class AVLNodeTest {
 
         // Verify second rotation
         assertEquals(two, root.key);
-        assertEquals(one, root.left.key);
-        assertEquals(five, root.right.key);
-        assertEquals(three, root.right.left.key);
-        assertEquals(six, root.right.right.key);
+        assertEquals(one, root.getLeft().key);
+        assertEquals(five, root.getRight().key);
+        assertEquals(three, root.getRight().getLeft().key);
+        assertEquals(six, root.getRight().getRight().key);
         assertEquals(5, root.size);
         assertEquals(3, root.height);
         root.validate();
@@ -155,11 +150,11 @@ public class AVLNodeTest {
 
         // Verify complex rotation.
         assertEquals(three, root.key);
-        assertEquals(two, root.left.key);
-        assertEquals(one, root.left.left.key);
-        assertEquals(five, root.right.key);
-        assertEquals(four, root.right.left.key);
-        assertEquals(six, root.right.right.key);
+        assertEquals(two, root.getLeft().key);
+        assertEquals(one, root.getLeft().getLeft().key);
+        assertEquals(five, root.getRight().key);
+        assertEquals(four, root.getRight().getLeft().key);
+        assertEquals(six, root.getRight().getRight().key);
         assertEquals(6, root.size);
         assertEquals(3, root.height);
         root.validate();
@@ -190,8 +185,8 @@ public class AVLNodeTest {
 
         // Verify first rotation
         assertEquals(five, root.key);
-        assertEquals(six, root.right.key);
-        assertEquals(four, root.left.key);
+        assertEquals(six, root.getRight().key);
+        assertEquals(four, root.getLeft().key);
         assertEquals(3, root.size);
         assertEquals(2, root.height);
         root.validate();
@@ -202,10 +197,10 @@ public class AVLNodeTest {
 
         // Verify second rotation
         assertEquals(five, root.key);
-        assertEquals(two, root.left.key);
-        assertEquals(six, root.right.key);
-        assertEquals(one, root.left.left.key);
-        assertEquals(four, root.left.right.key);
+        assertEquals(two, root.getLeft().key);
+        assertEquals(six, root.getRight().key);
+        assertEquals(one, root.getLeft().getLeft().key);
+        assertEquals(four, root.getLeft().getRight().key);
         assertEquals(5, root.size);
         assertEquals(3, root.height);
         root.validate();
@@ -215,11 +210,11 @@ public class AVLNodeTest {
 
         // Verify complex rotation.
         assertEquals(four, root.key);
-        assertEquals(two, root.left.key);
-        assertEquals(five, root.right.key);
-        assertEquals(six, root.right.right.key);
-        assertEquals(one, root.left.left.key);
-        assertEquals(three, root.left.right.key);
+        assertEquals(two, root.getLeft().key);
+        assertEquals(five, root.getRight().key);
+        assertEquals(six, root.getRight().getRight().key);
+        assertEquals(one, root.getLeft().getLeft().key);
+        assertEquals(three, root.getLeft().getRight().key);
         assertEquals(6, root.size);
         assertEquals(3, root.height);
         root.validate();
@@ -251,10 +246,10 @@ public class AVLNodeTest {
         // Test deletion of a node with no children.
         root = root.delete(six, comparator);
         assertEquals(four, root.key);
-        assertEquals(five, root.right.key);
-        assertFalse(root.right.hasRight());
-        assertEquals(1, root.right.size);
-        assertEquals(1, root.right.height);
+        assertEquals(five, root.getRight().key);
+        assertFalse(root.getRight().hasRight());
+        assertEquals(1, root.getRight().size);
+        assertEquals(1, root.getRight().height);
         assertEquals(3, root.height);
         assertEquals(4, root.size);
         root.validate();
@@ -262,11 +257,11 @@ public class AVLNodeTest {
         // Test deletion of a node with one child.
         root = root.delete(two, comparator);
         assertEquals(four, root.key);
-        assertEquals(three, root.left.key);
-        assertEquals(five, root.right.key);
+        assertEquals(three, root.getLeft().key);
+        assertEquals(five, root.getRight().key);
         assertEquals(2, root.height);
         assertEquals(3, root.size);
-        assertEquals(1, root.left.height);
+        assertEquals(1, root.getLeft().height);
         root.validate();
 
         // Test deletion of a node with no children.
@@ -312,8 +307,8 @@ public class AVLNodeTest {
         // Deletion should cause rotation.
         root = root.delete(four, comparator);
         assertEquals(two, root.key);
-        assertEquals(one, root.left.key);
-        assertEquals(three, root.right.key);
+        assertEquals(one, root.getLeft().key);
+        assertEquals(three, root.getRight().key);
         assertEquals(2, root.height);
         assertEquals(3, root.size);
         root.validate();
@@ -342,8 +337,8 @@ public class AVLNodeTest {
         // Deletion should cause rotation.
         root = root.delete(two, comparator);
         assertEquals(four, root.key);
-        assertEquals(three, root.left.key);
-        assertEquals(five, root.right.key);
+        assertEquals(three, root.getLeft().key);
+        assertEquals(five, root.getRight().key);
         assertEquals(2, root.height);
         assertEquals(3, root.size);
         root.validate();
@@ -379,11 +374,11 @@ public class AVLNodeTest {
         // Test deletion of root when LEFT subtree is longer.
         root = root.delete(4, comparator);
         assertEquals(three, root.key);
-        assertEquals(one, root.left.key);
-        assertEquals(six, root.right.key);
-        assertEquals(five, root.right.left.key);
-        assertEquals(zero, root.left.left.key);
-        assertEquals(two, root.left.right.key);
+        assertEquals(one, root.getLeft().key);
+        assertEquals(six, root.getRight().key);
+        assertEquals(five, root.getRight().getLeft().key);
+        assertEquals(zero, root.getLeft().getLeft().key);
+        assertEquals(two, root.getLeft().getRight().key);
         assertEquals(3, root.height);
         assertEquals(6, root.size);
         root.validate();
@@ -391,10 +386,10 @@ public class AVLNodeTest {
         // Test deletion of root when Right subtree is longer OR subtrees are same size.
         root = root.delete(3, comparator);
         assertEquals(five, root.key);
-        assertEquals(one, root.left.key);
-        assertEquals(six, root.right.key);
-        assertEquals(zero, root.left.left.key);
-        assertEquals(two, root.left.right.key);
+        assertEquals(one, root.getLeft().key);
+        assertEquals(six, root.getRight().key);
+        assertEquals(zero, root.getLeft().getLeft().key);
+        assertEquals(two, root.getLeft().getRight().key);
         assertEquals(3, root.height);
         assertEquals(5, root.size);
         root.validate();
@@ -402,9 +397,9 @@ public class AVLNodeTest {
         // Test deletion of non-root with two children.
         root = root.delete(one, comparator);
         assertEquals(five, root.key);
-        assertEquals(two, root.left.key);
-        assertEquals(six, root.right.key);
-        assertEquals(zero, root.left.left.key);
+        assertEquals(two, root.getLeft().key);
+        assertEquals(six, root.getRight().key);
+        assertEquals(zero, root.getLeft().getLeft().key);
         assertEquals(3, root.height);
         assertEquals(4, root.size);
         root.validate();
@@ -423,7 +418,7 @@ public class AVLNodeTest {
 
         // Verify tree is unchanged.
         assertEquals(root.key, four);
-        assertEquals(one, root.left.key);
+        assertEquals(one, root.getLeft().key);
         assertEquals(2, root.height);
         assertEquals(2, root.size);
         root.validate();
@@ -433,7 +428,7 @@ public class AVLNodeTest {
 
         // Verify tree is unchanged.
         assertEquals(root.key, four);
-        assertEquals(one, root.left.key);
+        assertEquals(one, root.getLeft().key);
         assertEquals(2, root.height);
         assertEquals(2, root.size);
         root.validate();
@@ -443,7 +438,7 @@ public class AVLNodeTest {
         // Verify tree is unchanged.
         // Verify same results as before the deletion.
         assertEquals(root.key, four);
-        assertEquals(one, root.left.key);
+        assertEquals(one, root.getLeft().key);
         assertEquals(2, root.height);
         assertEquals(2, root.size);
         root.validate();
